@@ -202,8 +202,20 @@ The project uses `tess4j`, which requires native Tesseract binaries and language
 
 - Install Tesseract: `brew install tesseract`
 - Verify install: `tesseract --version`
+- Verify native library exists: `ls "$(brew --prefix tesseract)/lib/libtesseract.dylib"`
 - Verify tessdata path exists: `ls /opt/homebrew/share/tessdata`
 - Ensure `ocr.tessdata-path` matches your machine path.
+- Start the app with native access and JNA path configured:
+
+```bash
+mvn spring-boot:run -Dspring-boot.run.jvmArguments="-Djna.library.path=$(brew --prefix tesseract)/lib --enable-native-access=ALL-UNNAMED"
+```
+
+- Required application property:
+
+```properties
+ocr.tessdata-path=/opt/homebrew/share/tessdata
+```
 
 ### CI environment
 
@@ -216,13 +228,21 @@ The project uses `tess4j`, which requires native Tesseract binaries and language
 - Install native Tesseract package in the application image.
 - Copy or install required `.traineddata` language files.
 - Set `ocr.tessdata-path` to the path inside the container (common Linux path: `/usr/share/tesseract-ocr/4.00/tessdata` or distro equivalent).
+- Start the JVM with:
+  - `--enable-native-access=ALL-UNNAMED`
+  - `-Djna.library.path=<native tesseract lib dir>`
 
-If Tesseract binary or tessdata files are missing, OCR requests will fail at runtime.
+If native Tesseract or tessdata files are missing, the application now fails OCR startup validation when `ocr.enabled=true`.
 
 ## Health and observability
 
 - Actuator health endpoint: `GET /actuator/health`
 - OCR health contributes status details when OCR is enabled.
+- OCR health now reports:
+  - `enabled`
+  - `tessdataPathValid`
+  - `nativeLibraryLoaded`
+  - `language`
 - OCR processing logs duration and success/failure events; raw extracted text is masked unless `ocr.debug-logging=true`.
 
 ## Test commands
